# structify

./: CMakeLists.txt  Dockerfile  README.md  conanfile.py  package.xml  update_float_tools.sh
.clusterfuzzlite/: Dockerfile  build.sh  reformat_fuzzer.cpp
.github/workflows/: build_and_test_with_sanitizers.yml  ci.yml  codeql.yml  msvc.yml
docker/archlinux/: Dockerfile
docker/ubuntu24.04/: Dockerfile
examples/: 01_simple_struct.cpp  02_alias.cpp  03_optional_types.cpp  04_subclasses.cpp  05_enums.cpp  06_map.cpp  07_stdtypes.cpp  08_custom_types.cpp  09_nested_types.cpp  10_simple_tokenize.cpp  11_calling_functions.cpp  12_simple_diff.cpp  13_diff_missing_data.cpp  14_config_file.cpp  15_yaml_parsing.cpp  16_cbor_parsing.cpp  17_yaml_serialization.cpp  18_cbor_serialization.cpp  CMakeLists.txt  reformat.cpp
include/json_struct/: json_struct.h  json_struct_cbor.h  json_struct_config.h  json_struct_core.h  json_struct_meta.h  json_struct_stl.h  json_struct_tokenizer.h  json_struct_type_handlers.h  json_struct_yaml.h
include/structify/: structify.h  structify_cbor.h  structify_cbor_writer.h  structify_config.h  structify_core.h  structify_diff.h  structify_meta.h  structify_stl.h  (+4 more)
performance/: CMakeLists.txt  benchmark.cpp  generated.json.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  cbor-serialize-test.cpp  cbor-struct-test.cpp  cbor-tokenizer-test.cpp  compiler-test.cpp  json-copy-test.cpp  json-enum-test.cpp  json-function-error-test.cpp  json-function-external-test-new.cpp  json-function-external-test.cpp  json-function-test-new.cpp  json-function-test.cpp  json-meta-test.cpp  json-mias-mat.cpp  json-nullable-test.cpp  json-optional.cpp  json-reformat.cpp  json-scope.cpp  json-string-with-nullterminator-test.cpp  json-struct-aliases-test.cpp  json-struct-array-varlength.cpp  json-struct-big-test.cpp  json-struct-comments-test.cpp  json-struct-diff.cpp  json-struct-error-string.cpp  json-struct-escape.cpp  json-struct-external.cpp  json-struct-fail.cpp  json-struct-float.cpp  json-struct-map-typehandler.cpp  json-struct-nested.cpp  json-struct-optional.cpp  json-struct-polymorphic-map.cpp  json-struct-serialize-test.cpp  json-struct-serialize-tuple.cpp  json-struct-stdint.cpp  json-struct-test-new.cpp  json-struct-test.cpp  json-struct-utf8.cpp  json-struct-verify.cpp  (+63 more)
(+1 files in other folders)
